--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,5 +4,11 @@
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
+    <style name="keyboard_style">
+        <item name="android:keyBackground">@drawable/key</item>
+        <item name="android:keyTextColor">#24B2E7</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:keyPreviewLayout">@layout/preview</item>
+    </style>
 
 </resources>
