--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,10 @@
     </style>
     <style name="keyboard_style">
         <item name="android:keyBackground">@drawable/key</item>
-        <item name="android:keyTextColor">#24B2E7</item>
-        <item name="android:background">@android:color/white</item>
+        <item name="android:keyTextColor">#22343D</item>
+        <item name="android:keyTextSize">50px</item>
+        <item name="android:shadowRadius">0</item>
+        <item name="android:background">@android:color/darker_gray</item>
         <item name="android:keyPreviewLayout">@layout/preview</item>
     </style>
 
