--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -4,6 +4,18 @@
     android:verticalGap="0px"
     android:keyHeight="50dp">
     <Row>
+        <Key android:codes="1337" android:keyLabel="1" android:keyEdgeFlags="left"/>
+        <Key android:codes="1338" android:keyLabel="2"/>
+        <Key android:codes="1339" android:keyLabel="3"/>
+        <Key android:codes="1340" android:keyLabel="4"/>
+        <Key android:codes="1341" android:keyLabel="5"/>
+        <Key android:codes="1342" android:keyLabel="6"/>
+        <Key android:codes="1343" android:keyLabel="7"/>
+        <Key android:codes="56" android:keyLabel="8"/>
+        <Key android:codes="57" android:keyLabel="9"/>
+        <Key android:codes="48" android:keyLabel="0" android:keyEdgeFlags="right"/>
+    </Row>
+    <Row>
         <Key android:codes="113" android:keyLabel="q" android:keyEdgeFlags="left"/>
         <Key android:codes="119" android:keyLabel="w"/>
         <Key android:codes="101" android:keyLabel="e"/>
