--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="horizontal">
     <FrameLayout
 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/camera_layout">
+        </FrameLayout>
+    <FrameLayout
+        android:id="@+id/camera_overlay"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
         </FrameLayout>
 </LinearLayout>
