--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context=".MainActivity"
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <FrameLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -14,4 +14,4 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
         </FrameLayout>
-</LinearLayout>
+</FrameLayout>
