--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     <com.lemonslice.appathon.NoScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:fillViewport="true">
-        <!--android:id="@+id/camera_layout">-->
+        android:fillViewport="true"
+        android:id="@+id/camera_layout">
         <FrameLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
