--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -40,7 +40,7 @@
         <!-- <Key android:codes="35,64" android:keyLabel="\# \@" /> !-->
     </Row>
     <Row>
-        <Key android:codes="-1" android:keyIcon="@drawable/e008"  android:keyEdgeFlags="left"/>
+        <Key android:codes="-1" android:keyIcon="@drawable/e008" android:keyWidth="15%p" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:keyLabel="z"/>
         <Key android:codes="120" android:keyLabel="x"/>
         <Key android:codes="99" android:keyLabel="c"/>
@@ -48,7 +48,7 @@
         <Key android:codes="98" android:keyLabel="b"/>
         <Key android:codes="110" android:keyLabel="n"/>
         <Key android:codes="109" android:keyLabel="m"/>
-        <Key android:codes="-5" android:keyLabel="DEL" android:keyWidth="20%p" android:isRepeatable="true" android:keyEdgeFlags="right"/>
+        <Key android:codes="-5" android:keyIcon="@drawable/delete_key" android:keyWidth="15%p" android:isRepeatable="true" android:keyEdgeFlags="right"/>
         <!--<Key android:codes="46" android:keyLabel="."/>
         <Key android:codes="63,33,58" android:keyLabel="\? ! :" android:keyEdgeFlags="right"/>!-->
     </Row>
