--- a/app/src/main/res/layout/camera_keyboard.xml
+++ b/app/src/main/res/layout/camera_keyboard.xml
@@ -28,7 +28,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Aa"
             android:id="@+id/backToKeyboardtxt"
-            android:layout_gravity="right|center_vertical"
+            android:layout_gravity="center_vertical|right|top"
             android:clickable="true"
             android:textStyle="bold"
             android:textColor="#ffffffff" />
@@ -36,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/selectEmoji"
-            android:layout_gravity="center"
+            android:layout_gravity="center|top"
             android:src="@drawable/tick" />
 
         <TextView
@@ -45,7 +45,16 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Emoji"
             android:id="@+id/emojiDisplayTxt"
-            android:layout_gravity="left|center_vertical"
+            android:layout_gravity="center_vertical|left|top"
             android:textColor="#FFFFFF" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/delete_key"
+            android:id="@+id/emoji_delete_key"
+            android:contentDescription="Delete"
+            android:layout_gravity="center_horizontal|bottom|right" />
+
     </FrameLayout>
 </FrameLayout>
