--- a/app/src/main/res/layout/camera_keyboard.xml
+++ b/app/src/main/res/layout/camera_keyboard.xml
@@ -80,6 +80,13 @@
                 android:layout_height="wrap_content"
                 android:text="Smile"
                 android:id="@+id/buttonSmile" />
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mouth"
+                android:id="@+id/buttonMouth" />
         </LinearLayout>
 
     </FrameLayout>
