--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,50 @@
     android:layout_height="fill_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
-    <com.lemonslice.appathon.NoScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:fillViewport="true"
-        android:id="@+id/camera_layout">
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:layout_weight="1"
+            android:id = "@+id/u1"
+            android:src = "@drawable/alex"
+            android:gravity="left|top"
+            android:clickable="true" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:id = "@+id/u2"
+            android:src = "@drawable/andy"
+            android:layout_weight="1"
+            android:gravity="top|center_horizontal"
+            android:clickable="true" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:id = "@+id/u3"
+            android:layout_weight="1"
+            android:src = "@drawable/sam"
+            android:gravity="right|top"
+            android:clickable="true" />
+        </LinearLayout>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:id = "@+id/yomoji"
+        android:text = "sdfds"
+        android:layout_gravity="center"
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="80dp" />
+
         <FrameLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
+            android:layout_gravity="bottom"
             android:id="@+id/camera_container">
             </FrameLayout>
-        </com.lemonslice.appathon.NoScrollView>
     <FrameLayout
         android:id="@+id/camera_overlay"
         android:layout_width="fill_parent"
