--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
+    <style name="AppTheme" parent="android:Theme.Material">
         <!-- Customize your theme here. -->
+        <item name="android:colorPrimary">#FF5722</item>
+        <item name="android:colorPrimaryDark">#E64A19</item>
+        <!--<item name="android:colorAccent">@color/accent</item>!-->
     </style>
     <style name="keyboard_style">
         <item name="android:keyBackground">@drawable/key</item>
