--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,8 @@
         android:text = ""
         android:layout_gravity="center"
         android:gravity="center_vertical|center_horizontal"
-        android:textSize="80dp" />
+        android:textSize="80dp"
+        android:textColor="#000000" />
 
 
     <android.support.v7.widget.CardView
