--- a/app/src/main/res/layout/camera_keyboard.xml
+++ b/app/src/main/res/layout/camera_keyboard.xml
@@ -87,6 +87,13 @@
                 android:layout_height="wrap_content"
                 android:text="Mouth"
                 android:id="@+id/buttonMouth" />
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sun"
+                android:id="@+id/buttonSun" />
         </LinearLayout>
 
     </FrameLayout>
