--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,18 @@
                     android:layout_height="fill_parent"
                     android:layout_weight="1"
                     android:id="@+id/u4"
-                    android:src="@drawable/alex"
+                    android:src="@drawable/cat"
+                    android:gravity="left|top"
+                    android:clickable="true"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp" />
+
+                <ImageView
+                    android:layout_width="125dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:id="@+id/u5"
+                    android:src="@drawable/burnside"
                     android:gravity="left|top"
                     android:clickable="true"
                     android:paddingLeft="10dp"
